<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_aboutus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:theme="@style/AppTheme.AppBarOverlay"/>

    <ImageView
        android:id="@+id/iv_aboutus_icon"
        android:layout_width="@dimen/aboutUs_icon_HW"
        android:layout_height="@dimen/aboutUs_icon_HW"
        android:layout_below="@+id/toolbar_aboutus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/aboutUs_icon_toTop"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tv_aboutus_tag"
        style="@style/text_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_aboutus_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/aboutUs_text_toIcon"
        android:text="@string/aboutus_tag" />

    <Button
        android:id="@+id/btn_aboutus_update"
        style="@style/button_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_aboutus_tag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_16"
        android:background="@drawable/d_line_grays_whitebg"
        android:gravity="left"
        android:padding="@dimen/default_8"
        android:text="@string/aboutus_update" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_default"
        android:orientation="vertical"
        android:padding="@dimen/default_8">

        <TextView
            style="@style/text_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/aboutus_copyright" />

        <TextView
            style="@style/text_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/aboutus_companyname" />
    </LinearLayout>

</RelativeLayout>